# UhbikWrapper

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  setup.sh
.github/workflows/: build.yml
Source/: CLAPPluginHost.cpp  CLAPPluginHost.h  EffectSlot.cpp  EffectSlot.h  Envelope.h  LFO.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowser.cpp  PresetBrowser.h  StepSequencer.h
docs/: building.md  ducker.md  getting-started.md  modulation.md  presets.md
